--- a/c++_client/Makefile
+++ b/c++_client/Makefile
@@ -1,6 +1,6 @@
 INCPATH = -I/usr/local/lib/boost_1_47_0/boost 
 LIBS = -lboost_system -lboost_thread -lpthread -lprotobuf
-SOURCES = main.cpp message.pb.h message.pb.cc
+SOURCES = main.cpp message.pb.h message.pb.cc ProtoEqModel.pb.h ProtoEqModel.pb.cc
 
 Client:
 	g++ $(INCPATH) $(LIBS) $(SOURCES) -o client.o
