Updated to work on Ubuntu

--- a/c++_client/Makefile
+++ b/c++_client/Makefile
@@ -1,8 +1,8 @@
-INCPATH = -I/usr/local/lib/boost_1_47_0/boost 
+INCPATH = -I/usr/include/boost 
 LIBS = -lboost_system -lboost_thread -lpthread -lprotobuf
-SOURCES = main.cpp message.pb.h message.pb.cc ProtoEqModel.pb.h ProtoEqModel.pb.cc
+SOURCES = main.cpp ProtoEqModel.pb.h ProtoEqModel.pb.cc
 
 Client:
-	g++ $(INCPATH) $(LIBS) $(SOURCES) -o client.o
+	g++ $(SOURCES) $(INCPATH) $(LIBS) -o client.o
 	./client.o localhost 8124
 	rm client.o
